--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,12 +1,19 @@
 .container {
   display: flex;
-  justify-content: center;
-  padding: 50px 0;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contents {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  width: 660px;
 }
 
 .main {
-  width: 660px;
-  min-height: 100vh;
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   row-gap: 50px;
@@ -26,6 +33,13 @@
   font-size: 25px;
 }
 
-.description {
-  font-size: 20px;
+.footer {
+  display: flex;
+  align-items: center;
+  height: 60px;
+}
+
+.copyright {
+  color: #adadad;
+  font-size: 14px;
 }
