--- a/pages/reset.css
+++ b/pages/reset.css
@@ -246,16 +246,16 @@ textarea {
  */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   cursor: pointer;
 }
 
 button:disabled,
-[type="button"]:disabled,
-[type="reset"]:disabled,
-[type="submit"]:disabled {
+[type='button']:disabled,
+[type='reset']:disabled,
+[type='submit']:disabled {
   cursor: default;
 }
 
@@ -313,8 +313,8 @@ textarea {
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -322,7 +322,7 @@ textarea {
  * Correct the outline style in Safari.
  */
 
-[type="search"] {
+[type='search'] {
   outline-offset: -2px; /* 1 */
 }
 
@@ -330,7 +330,7 @@ textarea {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -347,7 +347,7 @@ textarea {
 /**
  * Fix appearance for Firefox
  */
-[type="number"] {
+[type='number'] {
   -moz-appearance: textfield;
 }
 
