--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -20,7 +20,11 @@
 }
 
 .title {
-  font-size: 30px;
+  color: var(--title-color);
+  font-size: 40px;
+  font-weight: bold;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #484848;
 }
 
 .section {
@@ -30,7 +34,9 @@
 }
 
 .sectionTitle {
+  color: var(--title-color);
   font-size: 25px;
+  font-weight: bold;
 }
 
 .footer {
