--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,7 +6,7 @@
 
 .title {
   color: var(--title-color);
-  font-size: 40px;
+  font-size: var(--site-title-font-size);
   font-weight: bold;
   padding-bottom: 50px;
   border-bottom: 1px solid #484848;
