--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -9,12 +9,14 @@ body {
 /* todo: light theme toggle */
 :root {
   --background-color: #0b0b0b;
+  --border-color: #484848;
   --title-color: #e8e8e8;
   --font-color: #dedede;
   --weak-font-color: #c2c1c1;
   --link-color: #9da2ff;
   --site-title-font-size: 50px;
   --title-font-size: 40px;
+  --sub-title-font-size: 25px;
   --base-font-size: 16px;
 }
 
