--- a/src/pages/posts/index.module.css
+++ b/src/pages/posts/index.module.css
@@ -9,3 +9,23 @@
   font-size: var(--title-font-size);
   font-weight: bold;
 }
+
+.list {
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  border-bottom: 1px solid var(--border-color);
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.postLink {
+  font-size: var(--sub-title-font-size);
+  width: fit-content;
+}
