--- a/src/pages/posts/index.module.css
+++ b/src/pages/posts/index.module.css
@@ -13,7 +13,7 @@
 .list {
   display: flex;
   flex-direction: column;
-  padding: 0 30px;
+  padding: 0 15px;
 }
 
 .item {
@@ -21,7 +21,7 @@
   flex-direction: column;
   row-gap: 10px;
   border-bottom: 1px solid var(--border-color);
-  padding: 20px;
+  padding: 20px 0;
   margin-bottom: 20px;
 }
 
