--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,6 @@
   color: var(--title-color);
   font-size: var(--site-title-font-size);
   font-weight: bold;
-  padding-bottom: 50px;
+  padding: 50px 0;
   border-bottom: 1px solid var(--border-color);
 }
