--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -14,6 +14,8 @@ body {
   --font-color: #dedede;
   --weak-font-color: #c2c1c1;
   --link-color: #9da2ff;
+  --logo-blue: #4b53cf;
+  --logo-gradation: linear-gradient(to bottom right, #4b53cf 0%, #cf6363 100%);
   --site-title-font-size: 50px;
   --title-font-size: 40px;
   --sub-title-font-size: 25px;
