--- a/src/components/BaseLayout.module.css
+++ b/src/components/BaseLayout.module.css
@@ -1,33 +1,26 @@
-.outer {
+.header {
+  background-color: var(--header-color);
+  backdrop-filter: blur(3px);
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  justify-content: center;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-.container {
+.headerInner {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
-  min-height: 100vh;
   width: 660px;
 }
 
 @media all and (max-width: 768px) {
-  .container {
+  .headerInner {
     padding: 0 15px;
     width: 100%;
   }
-}
-
-.inner {
-  padding: 15px 0 50px;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  height: 60px;
-  margin-bottom: 50px;
 }
 
 .logoLink {
@@ -39,6 +32,55 @@
   font-size: var(--sub-title-font-size);
   font-weight: bold;
   width: fit-content;
+}
+
+.headerMenu {
+  display: flex;
+  column-gap: 30px;
+}
+
+@media all and (max-width: 768px) {
+  .headerMenu {
+    column-gap: 15px;
+  }
+}
+
+.headerMenuLink {
+  color: var(--weak-font-color);
+  text-decoration: none;
+}
+
+.outer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header + .outer {
+  padding-top: 60px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  width: 660px;
+}
+
+.header + .outer > .container {
+  min-height: calc(100vh - 60px);
+}
+
+@media all and (max-width: 768px) {
+  .container {
+    padding: 0 15px;
+    width: 100%;
+  }
+}
+
+.inner {
+  padding: 15px 0 50px;
 }
 
 .footer {
