--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -16,6 +16,7 @@ body {
   --weak-font-color: #c2c1c1;
   --link-color: #9da2ff;
   --logo-blue: #4b53cf;
+  --warn-color: #c4af1a;
   --logo-gradation: linear-gradient(to bottom right, #4b53cf 0%, #cf6363 100%);
   --site-title-font-size: 50px;
   --title-font-size: 40px;
