--- a/src/pages/posts/[year]/[date]/page.module.css
+++ b/src/pages/posts/[year]/[date]/page.module.css
@@ -4,6 +4,15 @@
   row-gap: 50px;
 }
 
+.archive {
+  border: 1px solid var(--warn-color);
+  border-radius: 5px;
+  padding: 15px;
+  color: var(--warn-color);
+  font-weight: bold;
+}
+
 .title {
   font-size: 30px;
+  font-weight: bold;
 }
