記事の日付追加

--- a/src/pages/posts/[year]/[date]/page.module.css
+++ b/src/pages/posts/[year]/[date]/page.module.css
@@ -12,6 +12,16 @@
   font-weight: bold;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+.date {
+  color: var(--weak-font-color);
+}
+
 .title {
   font-size: 30px;
   font-weight: bold;
