postの並び順修正

--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -21,6 +21,7 @@ body {
   --site-title-font-size: 50px;
   --title-font-size: 40px;
   --sub-title-font-size: 25px;
+  --small-title-font-size: 20px;
   --base-font-size: 16px;
 }
 
