--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,19 +1,10 @@
-@import "reset.css";
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family:
-    -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import "tailwindcss";
 
 /* todo: light theme toggle */
 :root {
   --background-color: #0b0b0b;
   --header-color: rgba(11, 11, 11, 0.75);
-  --border-color: #484848;
+  --border-color: #2f1010;
   --title-color: #e8e8e8;
   --font-color: #dedede;
   --weak-font-color: #c2c1c1;
@@ -33,19 +24,4 @@ body {
   background: var(--background-color);
   font-size: var(--base-font-size);
   line-height: 2;
-}
-
-a {
-  color: var(--link-color);
-  text-decoration: underline;
-  transition-duration: 0.5s;
-  transition-property: opacity;
-}
-
-a:hover {
-  opacity: 0.7;
-}
-
-* {
-  box-sizing: border-box;
 }
